upgrade to bootstrap 4

--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
-<!DOCTYPE html5>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>איקס עיגול</title>
-		<!-- Jquery -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<!-- BootStrap -->
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+         <meta charset="utf-8">
+  		 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+         <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"> 
+		 <title>איקס עיגול</title>
+		<!-- BootStrap 4 css -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+		<!-- BootStrap 4 and Jquery -->       
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 		<!-- My STYLE -->
 		<style>
-		* {
+/*		* {
 			box-sizing:border-box;
 		}
+*/		
 		#gameBoard,canvas {
 			margin:0;
 			padding:0;
@@ -42,10 +40,6 @@
 		#bdy{
 				position: relative;
 			}
-		#nav {
-				margin: 0;
-				z-index: 3;
-			}
 			#canvas {
 				position: absolute;
 			}
@@ -64,18 +58,12 @@
 	</head>
 	<body id="bdy">
 	<!-- Navigation -->
-    <nav id="nav" class="navbar navbar-inverse bg-primary navbar-custom ">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle " data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-                   <i class="fa fa-bars"></i>
-                </button>
-				<table>
+<nav id="nav" class="navbar navbar-toggleable-md navbar-light bg-faded">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+       	aria-expanded="false"   aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  				<table>
 					<tr>
 						<td>
 							<span id="hearts" ></span>
@@ -91,32 +79,31 @@
 						</td>
 					</tr>
 				</table>
-            </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#">צור קשר</a>
-                    </li>
-					<li>
-                        <a href="#">הסברים</a>
-                    </li>
-                    <li>
-                        <a href="#"> לשחק מול חברים</a>
-                    </li>
-                    <li>
-                        <a href="#">לשחק מול המחשב </a>
-                    </li>
-
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto ">
+          <li id="idAiSelect" class="nav-item active">
+            <a  class="nav-link" href="#">לשחק מול המחשב <span class="sr-only">(current)</span></a>
+          </li>
+          <li  id="idFreindSelect" class="nav-item">
+            <a class="nav-link" href="#">לשחק מול חבר</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">הסברים</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">צור קשר</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">שתף</a>
+          </li>      
+        </ul>
+      </div>
+  </nav>
+  <!-- ******************************************************************** -->
 		<div id="gameBoard" class="row"></div> 
 		<!-- here comes gamcell div from js -->
+  <!-- ******************************************************************** -->        
 		<div id="GameModal" class="modal fade in">
 		  <div class="modal-dialog" role="document">
 			<div class="modal-content">
